// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building common extension source map should have source map data 1`] = `
CommonExtensionSourceMap {
  "baseEntityName": Object {
    "column": 9,
    "line": 2,
    "tokenText": "EntityName",
  },
  "identityProperties": Array [],
  "metaEdId": Object {
    "column": 30,
    "line": 2,
    "tokenText": "[1]",
  },
  "metaEdName": Object {
    "column": 9,
    "line": 2,
    "tokenText": "EntityName",
  },
  "properties": Array [],
  "queryableFields": Array [],
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Common",
  },
}
`;

exports[`when building common extension with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'with context'}, column: 0, line: 7, token: TrailingText",
]
`;

exports[`when building common extension with lowercase common extension name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Commonentity', column: 9, line: 2, token: entity",
]
`;

exports[`when building common extension with missing common extension name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Commonadditions', column: 10, line: 2, token: additions",
]
`;

exports[`when building common extension with missing property should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year'}, column: 0, line: 3, token: End Namespace",
]
`;

exports[`when building duplicate common extensions should have validation failures for each entity -> Common 1 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 7,
  "tokenText": "Common",
}
`;

exports[`when building duplicate common extensions should have validation failures for each entity -> Common 2 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Common",
}
`;

exports[`when building duplicate common extensions should have validation failures for each entity -> Common Extension 1 message 1`] = `"Common Extension named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate common extensions should have validation failures for each entity -> Common Extension 2 message 1`] = `"Common Extension named EntityName is a duplicate declaration of that name."`;
